v1.10.x/connectors/dashboard/metabase/yaml.mdx
---
title: Run the Metabase Connector Externally
description: Configure Metabase dashboard connector for OpenMetadata using YAML. Step-by-step setup guide with examples to integrate your Metabase dashboards seamlessly.
slug: /connectors/dashboard/metabase/yaml
sidebarTitle: Run Externally
mode: "wide"
---
import { ConnectorDetailsHeader } from '/snippets/components/ConnectorDetailsHeader/ConnectorDetailsHeader.jsx'
import { CodePreview, ContentPanel, ContentSection, CodePanel } from '/snippets/components/CodePreview.jsx'
import SourceConfigDef from '/snippets/connectors/yaml/dashboard/source-config-def.mdx'
import IngestionSinkDef from '/snippets/connectors/yaml/ingestion-sink-def.mdx'
import WorkflowConfigDef from '/snippets/connectors/yaml/workflow-config-def.mdx'
import SourceConfig from '/snippets/connectors/yaml/dashboard/source-config.mdx'
import IngestionSink from '/snippets/connectors/yaml/ingestion-sink.mdx'
import WorkflowConfig from '/snippets/connectors/yaml/workflow-config.mdx'
import IngestionCli from '/snippets/connectors/yaml/ingestion-cli.mdx'
import PythonRequirements from '/snippets/connectors/python-requirements.mdx'
import ExternalIngestionDeployment from '/snippets/v1.10.x/connectors/external-ingestion-deployment.mdx'

<ConnectorDetailsHeader
  icon='/public/images/connectors/metabase.webp'
name="Metabase"
  stage="PROD"
availableFeatures={["Dashboards", "Charts", "Lineage", "Projects"]}
  unavailableFeatures={["Owners", "Tags", "Datamodels"]} />
In this section, we provide guides and references to use the Metabase connector.
Configure and schedule Metabase metadata and profiler workflows from the OpenMetadata UI:
- [Requirements](#requirements)
- [Metadata Ingestion](#metadata-ingestion)
<ExternalIngestionDeployment />
## Requirements
The service account must have view access to all dashboards and charts that need to be ingested. Without view access, the connector cannot retrieve those objects.
**Note:** We have tested Metabase with Versions `0.42.4` and `0.43.4`.
### Python Requirements
<PythonRequirements />
To run the Metabase ingestion, you will need to install:
```bash
pip3 install "openmetadata-ingestion[metabase]"
```
## Metadata Ingestion
All connectors are defined as JSON Schemas.
[Here](https://github.com/open-metadata/OpenMetadata/blob/main/openmetadata-spec/src/main/resources/json/schema/entity/services/connections/dashboard/metabaseConnection.json)
you can find the structure to create a connection to Metabase.
In order to create and run a Metadata Ingestion workflow, we will follow
the steps to create a YAML configuration able to connect to the source,
process the Entities if needed, and reach the OpenMetadata server.
The workflow is modeled around the following
[JSON Schema](https://github.com/open-metadata/OpenMetadata/blob/main/openmetadata-spec/src/main/resources/json/schema/metadataIngestion/workflow.json)
### 1. Define the YAML Config
This is a sample config for Metabase:

<CodePreview>

<ContentPanel>

<ContentSection id={1} title="Source Configuration" lines="1-3">

Configure the source type and service name for your Metabase connector.

</ContentSection>

<ContentSection id={2} title="Username" lines="7">

**username**: Username to connect to Metabase, for ex. `user@organization.com`. This user should have access to relevant dashboards and charts in Metabase to fetch the metadata.

</ContentSection>

<ContentSection id={3} title="Password" lines="8">

**password**: Password of the user account to connect with Metabase.

</ContentSection>

<ContentSection id={4} title="Host Port" lines="9">

**hostPort**: The hostPort parameter specifies the host and port of the Metabase instance. This should be specified as a string in the format `http://hostname:port` or `https://hostname:port`. For example, you might set the hostPort parameter to `https://org.metabase.com:3000`.

</ContentSection>

<ContentSection id={5} title="Source Config" lines="10-52">

<SourceConfigDef />

</ContentSection>

<ContentSection id={6} title="Sink Configuration" lines="53-55">

<IngestionSinkDef />

</ContentSection>

<ContentSection id={7} title="Workflow Configuration" lines="56-72">

<WorkflowConfigDef />

</ContentSection>

</ContentPanel>

<CodePanel fileName="metabase_config.yaml">

```yaml
source:
  type: metabase
  serviceName: <service name>
  serviceConnection:
    config:
      type: Metabase
      username: <username>
      password: <password>
      hostPort: <hostPort>
```

<SourceConfig />

<IngestionSink />

<WorkflowConfig />

</CodePanel>

</CodePreview>
<IngestionCli />
