v1.12.x/connectors/dashboard/metabase/yaml.mdx
---
title: Run the Metabase Connector Externally
description: Configure Metabase dashboard connector for OpenMetadata using YAML. Step-by-step setup guide with examples to integrate your Metabase dashboards seamlessly.
sidebarTitle: Run Externally
mode: "wide"
---
import { ConnectorDetailsHeader } from '/snippets/components/ConnectorDetailsHeader/ConnectorDetailsHeader.jsx'
import { CodePreview, ContentPanel, ContentSection, CodePanel } from '/snippets/components/CodePreview.jsx'
import SourceConfigDef from '/snippets/connectors/yaml/dashboard/source-config-def.mdx'
import IngestionSinkDef from '/snippets/connectors/yaml/ingestion-sink-def.mdx'
import WorkflowConfigDef from '/snippets/connectors/yaml/workflow-config-def.mdx'
import SourceConfig from '/snippets/connectors/yaml/dashboard/source-config.mdx'
import IngestionSink from '/snippets/connectors/yaml/ingestion-sink.mdx'
import WorkflowConfig from '/snippets/connectors/yaml/workflow-config.mdx'
import IngestionCli from '/snippets/connectors/yaml/ingestion-cli.mdx'
import PythonRequirements from '/snippets/connectors/python-requirements.mdx'
import ExternalIngestionDeployment from '/snippets/v1.12.x/connectors/external-ingestion-deployment.mdx'

<ConnectorDetailsHeader
  icon='/public/images/connectors/metabase.webp'
name="Metabase"
  stage="PROD"
availableFeatures={["Dashboards", "Charts", "Lineage", "Projects", "Owners"]}
  unavailableFeatures={["Tags", "Datamodels"]} />
In this section, we provide guides and references to use the Metabase connector.

<Info>
**Supported Authentication Types:**
- **Basic Auth** — Connect using a Metabase account email and password. The connector obtains a session token automatically.
- **API Token** — Connect using a Metabase API key. Recommended when basic authentication is disabled (e.g., SSO-enforced environments).
</Info>

Configure and schedule Metabase metadata and profiler workflows from the OpenMetadata UI:
- [Requirements](#requirements)
- [Metadata Ingestion](#metadata-ingestion)
<ExternalIngestionDeployment />
## Requirements
The Metabase account or API key used to connect must have view access to all dashboards and charts you want to ingest.

To ingest **owner information**, the account must also have visibility of Metabase user profiles. This is available to admin accounts and accounts in groups with the appropriate permissions.

**Note:** Collate has been tested with Metabase versions 0.42.4 and 0.43.4.

### Python Requirements
<PythonRequirements />
To run the Metabase ingestion, you will need to install:
```bash
pip3 install "openmetadata-ingestion[metabase]"
```
## Metadata Ingestion
All connectors are defined as JSON Schemas.
[Here](https://github.com/open-metadata/OpenMetadata/blob/main/openmetadata-spec/src/main/resources/json/schema/entity/services/connections/dashboard/metabaseConnection.json)
you can find the structure to create a connection to Metabase.
In order to create and run a Metadata Ingestion workflow, we will follow
the steps to create a YAML configuration able to connect to the source,
process the Entities if needed, and reach the OpenMetadata server.
The workflow is modeled around the following
[JSON Schema](https://github.com/open-metadata/OpenMetadata/blob/main/openmetadata-spec/src/main/resources/json/schema/metadataIngestion/workflow.json)
### 1. Define the YAML Config
This is a sample config for Metabase:

<CodePreview>

<ContentPanel>

<ContentSection id={1} title="Source Configuration" lines="1-3">

Configure the source type and service name for your Metabase connector.

</ContentSection>

<ContentSection id={2} title="Username" lines="7">

**username**: Email address of the Metabase account, for example `user@organization.com`. The account must have view access to the dashboards and charts you want to ingest. Required for Basic Authentication — leave blank if using an API Token.

</ContentSection>

<ContentSection id={3} title="Password" lines="8">

**password**: Password of the user account to connect with Metabase. Required for Basic Authentication — leave blank if using an API Token.

</ContentSection>

<ContentSection id={4} title="API Token" lines="9">

**apiKey**: API key for Metabase. Use this instead of username and password when basic authentication is disabled (e.g., SSO-enforced environments). Generate the key in the Metabase Admin panel under **Settings > Authentication > API Keys**.

</ContentSection>

<ContentSection id={5} title="Host Port" lines="10">

**hostPort**: The hostPort parameter specifies the host and port of the Metabase instance. This should be specified as a string in the format `http://hostname:port` or `https://hostname:port`. For example, you might set the hostPort parameter to `https://org.metabase.com:3000`.

</ContentSection>

<ContentSection id={6} title="Source Config" lines="11-53">

<SourceConfigDef />

</ContentSection>

<ContentSection id={7} title="Sink Configuration" lines="54-56">

<IngestionSinkDef />

</ContentSection>

<ContentSection id={8} title="Workflow Configuration" lines="57-73">

<WorkflowConfigDef />

</ContentSection>

</ContentPanel>

<CodePanel fileName="metabase_config.yaml">

```yaml
source:
  type: metabase
  serviceName: <service name>
  serviceConnection:
    config:
      type: Metabase
      username: <username>
      password: <password>
      apiKey: <api-token>
      hostPort: <hostPort>
```

<SourceConfig />

<IngestionSink />

<WorkflowConfig />

</CodePanel>

</CodePreview>
<IngestionCli />
